--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pozpatku.ricanyubrna.cz/" # the base hostname & protocol for your site
 github_username: xsuchy/pozpatku
+youtube_channel: UCFft3cR2Cl1U-HEVHEODN1g
 
 markdown: kramdown
 highlighter: rouge
