--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://pozpatku.ricanyubrna.cz/" # the base hostname & protocol for your site
 github_username: xsuchy/pozpatku
 youtube_channel: UCFft3cR2Cl1U-HEVHEODN1g
+facebook_username: DivadloPozpatku
 
 markdown: kramdown
 highlighter: rouge
